frontend/src/styles/DishList.scss
.dish-list-grid {
  display: grid;
  grid-template-columns: repeat(3, 2fr); 
  // gap: 5px; 
  list-style: none;
  padding: 0;
  justify-items: center;
}

/* Style for each DishListItem */
.border {
  border: solid;
  margin: 1.5rem;
  border-radius: 5.0%;
  border-width: thin;
}

.dish-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  /* Center vertically */
  align-items: center;
  /* Center horizontally */
}

// .img-size{
//   width: 35%;
// }

